syntax = "proto3";

option go_package = "myserver/app/pb";

package helloworld;

import "google/api/annotations.proto";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
      option (google.api.http) = {
        post: "/myendpoint"
        body: "*"
    };
  }
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1 [json_name = "name"];
}

// The response message containing the greetings
message HelloReply {
  string message = 1 [json_name = "message"];
}
